<resources>
    <string name="app_name">FootballApp</string>
    <string name="statistic">Statistic</string>
    <string name="overview">OverView</string>
    <string name="line_up">line up</string>
    <string name="_1st_half">1st half</string>
    <string name="ball_possession">Ball Possession</string>
    <string name="match_preview">Match Preview</string>
    <string name="gameweek_3">Gameweek 3</string>
    <string name="matches">Matches</string>
    <string name="top_players">Top Players</string>
    <string name="videos">Videos</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
</resources>